# mx-sdk-rs-0.28.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md
contracts/benchmarks/mappers/benchmark-common/: Cargo.toml
contracts/benchmarks/mappers/linked-list-repeat/: Cargo.toml
contracts/benchmarks/mappers/map-repeat/: Cargo.toml
contracts/benchmarks/mappers/queue-repeat/: Cargo.toml
contracts/benchmarks/mappers/set-repeat/: Cargo.toml
contracts/benchmarks/mappers/single-value-repeat/: Cargo.toml
contracts/benchmarks/mappers/vec-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/meta/: Cargo.toml
contracts/benchmarks/send-tx-repeat/wasm/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/meta/: Cargo.toml
contracts/benchmarks/str-repeat/wasm/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/adder/meta/: Cargo.toml
contracts/examples/adder/wasm/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/meta/: Cargo.toml
contracts/examples/bonding-curve-contract/wasm/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crowdfunding-dct/meta/: Cargo.toml
contracts/examples/crowdfunding-dct/wasm/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-bubbles/denali/: joinGame.scen.json  topUp_ok.scen.json  topUp_withdraw.scen.json
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/digital-cash/meta/: Cargo.toml
contracts/examples/empty/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/moax-dct-swap/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-minter/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/order-book/pair/meta/: Cargo.toml
contracts/examples/ping-pong-moax/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/token-release/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/dct-system-sc-mock/: Cargo.toml
contracts/feature-tests/formatted-message-features/: Cargo.toml
contracts/feature-tests/multi-contract-features/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected_main.abi.json  use_module_expected_view.abi.json
contracts/feature-tests/use-module/meta/abi/: Cargo.toml
contracts/feature-tests/use-module/src/: use_module.rs
contracts/feature-tests/use-module/wasm/: Cargo.toml
contracts/modules-legacy/dharitri-wasm-module-dns/: Cargo.toml  README.md
contracts/modules-legacy/dharitri-wasm-module-features/: Cargo.toml  README.md
contracts/modules-legacy/dharitri-wasm-module-features/src/: lib.rs
contracts/modules-legacy/dharitri-wasm-module-pause/: Cargo.toml  README.md
contracts/modules-legacy/dharitri-wasm-module-pause/src/: lib.rs
contracts/modules-legacy/dharitri-wasm-module-users/: Cargo.toml  README.md
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/abi_json/: build_info_abi_json.rs  mod.rs
dharitri-wasm-debug/src/api/: crypto_api_mock.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-derive/src/: managed_vec_item_derive.rs
dharitri-wasm-derive/src/generate/: abi_gen.rs
dharitri-wasm-derive/src/preprocessing/: substitution_list.rs
dharitri-wasm-modules/: Cargo.toml
dharitri-wasm-modules/src/: dns.rs  features.rs  pause.rs  users.rs
dharitri-wasm-modules/src/bonding_curve/utils/: owner_endpoints.rs
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-node/src/api/: crypto_api_node.rs
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/abi/: build_info_abi.rs
dharitri-wasm/src/contract_base/wrappers/: error_helper.rs
dharitri-wasm/src/types/general/: dct_token_data.rs  dct_token_payment.rs  dct_token_payment_multi_arg.rs  mod.rs  token_identifier.rs
dharitri-wasm/src/types/io/: ignore_args.rs  multi_args.rs  multi_args_vec.rs  optional_arg.rs
dharitri-wasm/src/types/managed/: big_int.rs  big_uint.rs  elliptic_curve.rs  managed_address.rs  managed_buffer.rs  managed_buffer_cached_builder.rs  managed_byte_array.rs  managed_multi_result_vec.rs  managed_multi_result_vec_counted.rs  managed_multi_result_vec_eager.rs  managed_multi_result_vec_iter.rs  managed_ref.rs  managed_vec.rs
dharitri-wasm/src/types/managed_codec/: managed_buffer_nested_en_output.rs
tools/erdpy-snippet-generator/: Cargo.toml
(+176 files in other folders)
