[package]
name = "pair-meta"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[dependencies.order-book-pair]
path = ".."

[dependencies.dharitri-wasm]
version = "0.4.2"
path = "../../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.4.2"
path = "../../../../../dharitri-wasm-debug"
